[project]
name = "mobile01-scrape"
version = "0.1.0"
description = "mobile01 特定文章爬取"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "playwright>=1.49.1",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
license = { file = "LICENSE" }
